fixed z-index problem

--- a/client/src/components/BeatList/TableHeader.scss
+++ b/client/src/components/BeatList/TableHeader.scss
@@ -25,6 +25,7 @@
       color: #FFFFFF;
       min-width: 60px;
       transition: background-color .2s ease-in-out;
+      background-color: $color-black;
       padding-right: 36px; // width of the sort icon
 
       &--first {
